// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#CheckBoxField() it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="terms"
      onChange={[Function]}
      type="checkbox"
      validators={
        Array [
          [Function],
        ]
      }
    />
  </div>
</form>
`;

exports[`#CheckBoxField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="username"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;

exports[`#CheckBoxField() should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group form-check"
  >
    <input
      checked={false}
      className="form-check-input "
      name="username"
      onChange={[Function]}
      type="checkbox"
    />
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
